--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "otp-generator": "^4.0.1"
   }
 }
