--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretty": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "express": "^4.21.1",
     "nodemailer": "^6.9.15",
     "otp-generator": "^4.0.1"
+  },
+  "devDependencies": {
+    "prettier": "3.3.3"
   }
 }
