--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "appwrite": "^16.0.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.1",
     "nodemailer": "^6.9.15",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prettier": "3.3.3"
