--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "preinstall": "npx only-allow pnpm",
         "start": "concurrently \"pnpm start:frontend\" \"pnpm start:backend\"",
         "start:frontend": "cd frontend && pnpm dev",
         "start:backend": "cd backend && nodemon index.js"
