--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,8 @@
 packages:
   # include packages in subfolders (change as required)
   - 'apps/**'
+  - 'frontend/**'
+  - 'backend/**'
   - 'packages/**'
   # if required, exclude directories
   - '!**/test/**'
