--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "pretty": "prettier --write .",
         "preinstall": "npx only-allow pnpm"
     },
+    "type": "module",
     "keywords": [],
     "author": "",
     "license": "ISC",
