--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
         "preinstall": "npx only-allow pnpm",
         "start": "concurrently \"pnpm start:frontend\" \"pnpm start:backend\"",
         "start:frontend": "cd frontend && pnpm dev",
-        "start:backend": "cd backend && nodemon index.js"
+        "start:backend": "cd backend && nodemon index.js",
+        "pretty": "prettier --write ."
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^9.1.0"
+    },
+    "dependencies": {
+        "prettier": "3.3.3"
     }
 }
