add bcrypt to hash and store password

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@ EMAIL_ID =   //sender email id
 APP_PASSWORD = //app password 
 MONGODB_URL = //mongodb url
 JWT_SECRET = //jwt secret
+FRONTEND_URL = //frontend url
